@@ -165,8 +165,8 @@ a {
   <h1>RSpec Results</h1>
 
   <div id="summary">
-    <p id="duration">&nbsp;</p>
     <p id="totals">&nbsp;</p>
+    <p id="duration">&nbsp;</p>
   </div>
 </div>
 
@@ -322,11 +322,9 @@ Diff:
 <div class="behaviour">
   <dl>
   <dt id="behaviour_6">Stack (not implemented features)</dt>
-    <script type="text/javascript">makeYellow('rspec-header');</script>
     <script type="text/javascript">makeYellow('behaviour_6');</script>
     <script type="text/javascript">moveProgressBar('93.3');</script>
     <dd class="spec not_implemented"><span class="not_implemented_spec_name">should transform to xml using #to_xml</span></dd>
-    <script type="text/javascript">makeYellow('rspec-header');</script>
     <script type="text/javascript">makeYellow('behaviour_6');</script>
     <script type="text/javascript">moveProgressBar('100.0');</script>
     <dd class="spec not_implemented"><span class="not_implemented_spec_name">should convert from xml using #from_xml</span></dd>
